@@ -2,6 +2,9 @@
  * CHANGELOG.
  */
 
+03162007 - Changed PHYSFS_file from a typedef to a #define (in case it would
+           cause an aggressive compiler to think you're passing the wrong type
+           to a function) and added Doxygen comments to explain it.
 03152007 - Bunch of work on Unicode...added case-folding stricmp, removed
            platform-specific stricmp implementations, changed appropriate
            calls to an ASCII-only stricmp that ignores locale. Fixed case on
